fix_changes_swagger_GEC (#39)
* feat: applied changes for call to GEC after swagger modification

* fix: to list

* fix: to list